[gd_scene load_steps=9 format=2]

[ext_resource path="res://entities/enemies/Brain.gd" type="Script" id=1]
[ext_resource path="res://entities/enemies/states/NaturalBehaviour.gd" type="Script" id=2]
[ext_resource path="res://entities/enemies/states/ReturnHome.gd" type="Script" id=3]
[ext_resource path="res://entities/enemies/states/Pursue.gd" type="Script" id=4]
[ext_resource path="res://entities/enemies/states/Rest.gd" type="Script" id=5]
[ext_resource path="res://entities/enemies/states/Attack.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 61.5641

[sub_resource type="CircleShape2D" id=2]

[node name="Brain" type="Node2D"]
script = ExtResource( 1 )

[node name="States" type="Node" parent="."]

[node name="NaturalBehaviour" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="States/NaturalBehaviour"]
wait_time = 2.0

[node name="Pursue" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="States/Pursue"]
wait_time = 7.5

[node name="Attack" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="ReturnHome" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="Rest" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="States/Rest"]
wait_time = 0.5

[node name="ThreatRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThreatRange"]
shape = SubResource( 1 )

[node name="LightDetection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightDetection"]
shape = SubResource( 2 )

[connection signal="timeout" from="States/NaturalBehaviour/Timer" to="States/NaturalBehaviour" method="_on_Timer_timeout"]
[connection signal="timeout" from="States/Pursue/Timer" to="States/Pursue" method="_on_Timer_timeout"]
[connection signal="timeout" from="States/Rest/Timer" to="States/Rest" method="_on_Timer_timeout"]
[connection signal="area_entered" from="ThreatRange" to="." method="_on_ThreatRange_area_entered"]
[connection signal="area_exited" from="ThreatRange" to="." method="_on_ThreatRange_area_exited"]
[connection signal="area_entered" from="LightDetection" to="." method="_on_LightDetection_area_entered"]
